
2017-01-17  Ron Norman <rjn@inglenet.com>
	* parser.y:  
	  Fixed to allow ASCENDING/DESCENING and INDEXED BY
	  to follow OCCURS in any order with -frelax-syntax


2017-03-19  Ron Norman <rjn@inglenet.com>
	* codegen.c:
	  Fixed emision of decimal constants to go into  program.c.h 

2017-03-11  Ron Norman <rjn@inglenet.com>
	* codegen.c:
	  Fixed to correctly emit parameter for CALL BY CONTENT
	  with an INTRINSIC function

2017-02-06  Ron Norman <rjn@inglenet.com>
	* codegen.c:
	  Emit code to set unused cob_procedure_params to NULL
	  when a CALL statement has fewer parameters that other CALLS

2017-02-06  Ron Norman <rjn@inglenet.com>
	* codegen.c:
	  Emit routines cob_file_external_addr,cob_file_malloc
	  & cob_file_free so that 'cob_file' is allocated within libcob
	  This will allow the stucture have fields added to the end
	  without forcing a recompile. COB_FILE_VERSION is unchanged
	  Emit cob_module_free so that structure gets freed within libcob

2017-01-30  Ron Norman <rjn@inglenet.com>
	* codegen.c:  
	  For dump, emit call to pass address of file for dump of specific
	  fields such as FILE STATUS

2017-01-25  Ron Norman <rjn@inglenet.com>
	* flag.def:  
	  Compiler option -fdump= added
	* cobc.h:  
	  Added cb_flag_dump and defines for values
	* cobc.c:  
	  Added code to set cb_flag_dump
	* codegen.c:  
	  Added code to emit calls to new trace & dump routines

2017-01-18  Ron Norman <rjn@inglenet.com>
	* field.c:  
	  Correction so that COB_FLAG_REAL_BINARY will be set on for COMP-5
	* codegen.c:  
	  For numeric litterals passed on CALL, COB_FLAG_REAL_BINARY is
	  not set on since the internal field is actually S9(9) COMP-4

2017-01-17  Ron Norman <rjn@inglenet.com>
	* parser.y,parser.c:  
	  Fixed coding errors in referencing CB_LITERAL before verifying
	  that the token is a literal in REPORT DIVISION 

2017-01-17  Ron Norman <rjn@inglenet.com>
	* codegen.c:  
	  Pointer arithmetic on systems with COB_NON_ALIGNED insert