@@ -1,5 +1,12 @@
 
-2017-01-17  Ron Norman <rjn@inglenet.com>
+2017-04-04  Ron Norman <rjn@inglenet.com>
+	* codegen.c:
+	  For LENGTH OF passed as parameter on CALL, build temporary
+	  field so that the internal field is passed as S9(9) COMP-4
+	  This is to be consistent with other numeric literals as 
+	  CALL parameters.
+
+2017-03-30  Ron Norman <rjn@inglenet.com>
 	* parser.y:  
 	  Fixed to allow ASCENDING/DESCENING and INDEXED BY
 	  to follow OCCURS in any order with -frelax-syntax
